
2006-12-12  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: revert to old bit rate calculation

2006-12-11  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src:  control.h, xtoffmpeg.c, gnome_ui.c, capture.c: suggested
		fix for bug # 1551015. Also fixed behaviour of 
		frame number in/decrement for single-frame capture
		and forward, back, step and reset counter buttons

2006-12-07  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* po/en.op: fixed mouseover for "Edit" button in multi-frame 
		mode
	* src: xtoffmpeg.c, gnome_ui.c, capture.c, capture.h, job.c,
		job.h: fed back code optimization around painting the
		mouse pointer Eduardo Gomez did for his patch to 
		ffmpeg (x11 demuxer). While at it I joined the 
		functions capturing individual frames from different
		sources (x11, shm) to make them more maintainable and
		easier to add (or reactivage dga, v4l)
	* .anjuta: that stuff should not be in svn
	* doc/xvidcap: de/xvidcap.xml, it/xvidcap.xml: version update

2006-11-16  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: fix for 16 bit depth and 8 bit palette with
		new libswscale (fix for 8bit will be unneeded with
		next upgrade of libavcodec)
	* minor fixes to debian/* stuff for more cleanly package
	* version bump (1.1.4p1)

2006-10-30  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/xvidcap/*/xvidcap*.omf: added more meaningful description
	* configure.in, debian: files, changelog, rule: version bump
	* src/gnome-xvidcap.glade: added version to about dialog

2006-10-30  Imanol Garcia <imanol.garcia.c@gmail.com>
	* doc/xvidcap/Makefile.am, doc/xvidcap/es/*: added preliminary
		Spanish translation of user-guide and manpage

2006-10-29  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* ffmpeg-svn6791/*: updated ffmpeg due to previously bad quality 
		of mjpeg
	* src/xtoffmpeg.c: made xtoffmpeg match new ffmpeg version and
		use libswscale
	* doc/xvidcap/*/figures: translated screenshots for German 